spacing issues

--- a/assets/css/cacao-journal.scss
+++ b/assets/css/cacao-journal.scss
@@ -63,4 +63,8 @@
 			}
 		}
 	}
+	@include breakpoint(max-md) {
+		padding-top: 53px;
+		padding-bottom: 77px;
+	}
 }
